Правки от наставника и подготовка к адаптиву, перевёл еденицы измерения

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-    <meta name="viewport" content="width=1100">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Eof_Beats</title>
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -13,7 +13,7 @@
     <div class="wrapper">
         <div class="maincontent">
             <section class="hero section">
-                <div class="container hero__container">
+                <div class="container">
 
                     <header class="header">
                         <a href="/" class="logo"><img src="./img/logo.svg" alt="logo"
@@ -44,8 +44,9 @@
                             </ul>
                         </nav>
                         <address class="contacts">
-                            <img src="./img/phone.svg" alt="phone" class="contacts__image">
-                            <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
+                            <a href="tel:+78007003030" class="contacts__phone">
+                                <img src="./img/phone.svg" alt="phone" class="contacts__image">
+                                8 800 700 30 30</a>
                         </address>
                     </header>
                     <div class="hero__content">
@@ -57,30 +58,29 @@
                             <div class="hero__image">
                             </div>
                         </div>
-
-
+                        <nav class="pros">
+                            <ul class="pros__lits">
+                                <li class="pros__item">
+                                    <img src="./img/noise.svg" alt="noise" class="pros__image">
+                                    <div class="pros__description">Безупречный звук</div>
+                                </li>
+                                <li class="pros__item">
+                                    <img src="./img/battery.svg" alt="noise" class="pros__image">
+                                    <div class="pros__description">До 40 часов работы</div>
+                                </li>
+                                <li class="pros__item">
+                                    <img src="./img/plague.svg" alt="noise" class="pros__image">
+                                    <div class="pros__description">Технология Fast Fuel</div>
+                                </li>
+                            </ul>
+                        </nav>
                     </div>
-                    <nav class="pros">
-                        <ul class="pros__lits">
-                            <li class="pros__item">
-                                <img src="./img/noise.svg" alt="noise" class="pros__image">
-                                <div class="pros__description">Безупречный звук</div>
-                            </li>
-                            <li class="pros__item">
-                                <img src="./img/battery.svg" alt="noise" class="pros__image">
-                                <div class="pros__description">До 40 часов работы</div>
-                            </li>
-                            <li class="pros__item">
-                                <img src="./img/plague.svg" alt="noise" class="pros__image">
-                                <div class="pros__description">Технология Fast Fuel</div>
-                            </li>
-                        </ul>
-                    </nav>
+                    
 
                 </div>
             </section>
             <section class="why section">
-                <div class="container why__container">
+                <div class="container">
                     <h1 class="main__title">почему beats solo 3?</h1>
                     <div class="why__subtitle">Процессор W1 работает невероятно эффективно и позволяет легко
                         подключать наушники к различным устройствам Apple.</div>
@@ -116,8 +116,8 @@
                 </div>
             </section>
             <section class="reviews section">
-                <div class="container reviews__container">
-                    <h1 class="main__title main__titile--reviews">отзывы</h1>
+                <div class="container">
+                    <h1 class="main__title main__title--reviews">отзывы</h1>
                     <div class="review">
                         <div class="avatar">
                             <img src="./img/reviews/user1.png" alt="user1" class="avatar__img">
@@ -150,8 +150,8 @@
                 </div>
             </section>
             <section class="delivery section">
-                <div class="container delivery__container">
-                    <h3 class="main__title main__title--delivery ">закажите доставку</h3>
+                <div class="container">
+                    <h1 class="main__title main__title--delivery ">закажите доставку</h1>
                     <form class="form">
                         <div class="form__column">
                             <div class="form__row">
