Правки от наставника, 2 неделя, организовал вложенности

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </section>
             <section class="why section">
                 <div class="container">
-                    <h1 class="main__title">почему beats solo 3?</h1>
+                    <h1 class="why__main-title">почему beats solo 3?</h1>
                     <div class="why__subtitle">Процессор W1 работает невероятно эффективно и позволяет легко
                         подключать наушники к различным устройствам Apple.</div>
                     <div class="benifits">
@@ -193,7 +193,7 @@
             </section>
             <section class="delivery section">
                 <div class="container">
-                    <h1 class="main__title main__title--delivery ">закажите доставку</h1>
+                    <h1 class="delivery__main-title ">закажите доставку</h1>
                     <form class="form">
                         <div class="form__column">
                             <div class="form__row">
