--- a/index.html
+++ b/index.html
@@ -161,11 +161,11 @@
 
             <section class="shop section">
                 <div class="container">
-                    <div class="shop__pager shop__pager--left">
+                    <a class="shop__pager shop__pager--left">
                         <svg class="shop__pager-img">
                             <use xlink:href="./img/sprite.svg#pager"></use>
                         </svg>
-                    </div>
+                    </a>
                     <div class="shop__content">
                         <div class="shop__main-image">
                             
@@ -208,11 +208,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="shop__pager shop__pager--right">
+                    <a class="shop__pager shop__pager--right">
                         <svg class="shop__pager-img">
                             <use xlink:href="./img/sprite.svg#pager"></use>
                         </svg>
-                    </div>
+                    </a>
                 </div>
             </section>
 
