--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                     <div class="footer__contacts">
                         <div class="footer__address">Москва, ул.Новый Арбат, д.31/12</div>
                         <address class="contacts">
-                            <a href="tel:+78007003030" class="contacts__phone contacts__phone--red">
+                            <a href="tel:+78007003030" class="contacts__phone contacts__phone--red contacts__phone--footer">
                                 <svg class="contacts__image contacts__image--red">
                                     <use xlink:href="./img/sprite.svg#phone">
                                     </use>
